# louis-antoine-portfolio

./: .cursorignore  .nojekyll  01_Baseline_Analysis.ipynb  05_Interactive_Demo.ipynb  BS_Physics_Diploma.txt  Cpk_Forecast.mac  EWMA_Control.mac  FINAL_PCM_STATUS.md  GITHUB_LINKS.md  GITHUB_PUSH_INSTRUCTIONS.md  INTERSTELLAR_AUDIO_GUIDE.md  PCM_ACCESS_INSTRUCTIONS.md  PCM_PROJECT_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_LINKS_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  README_PROJECTS.md  SST_FINAL_STATUS.md  SST_RESEARCH_COMPLETE.md  STAR_Summary.md  VERIFY_PCM_UPDATE.md  _config.yml  abbe-rayleigh-sim.html  add_duv_project.py  additional-projects.html  advanced-tech-skills.html  advanced_graphs.py  agora-research-hub.html  ai-assistant-backend-v2.js  ai-assistant-backend.js  ai-assistant-enhanced.html  analytics-dashboard.html  asml-experience.html  asml-photo-gallery.html  associate-coursework.html  associates-coursework.html  bachelors-coursework.html  baseline_measurements.csv  case-studies.html  (+186 more)
defect-detection-ml/: README.md  demo.py  docker-compose.yml  requirements.txt  streamlit_app.py  train.py
docs/: additional-projects.html  asml-experience.html  asml-photo-gallery.html  associate-coursework.html  core-algorithms-hub.html  eit-results.html  eit-simulations-fixed.html  galileo-project.html  gan-matlab.html  gan-power-device.html  gan-python.html  graduate-research-experience.html  index 2.html  index-advanced.html  index_contact_backup.html  innovation-projects.html  iot-robotics-technical-documentation.html  kirchhoff-sim.html  masters-coursework.html  maxwell-bloch-eit-project.html  memristor-research-poster.html  military-service-gallery.html  ml-algorithms-hub.html  ml-bayesian-sim.html  ml-defect-detection-complete-suite.html  ml-demos-hub.html  ml-documentation.html  ml-gan-sim.html  ml-transformer-sim.html  neural-opc-sim.html  nn-augmentation-studio.html  nn-dataset-builder.html  nn-defect-classifier.html  nn-model-converter.html  nn-training-playground.html  nn-tutorials.html  patient-admin-experience.html  pcm-api-reference.html  pcm-array-designer.html  pcm-batch-processing.html  (+44 more)
duv-files/: defect_analysis.html  doe_tool.html  lithography_simulator.html  process_dashboard.html  six_sigma_analytics.html  technical_docs.html
git/: COMMIT_EDITMSG  index  main
medimetrics-nest/apps/inference/: Dockerfile  pyproject.toml
medimetrics-nest/apps/inference/src/server/: main.py  settings.py
power-electronics/services/sim/: pyproject.toml
power-electronics/services/sim/src/: main.py
power-electronics/services/sim/src/kernels/: interleaved_boost.py
(+283 files in other folders)
