[tool.poetry]
name = "medimetrics-inference"
version = "1.0.0"
description = "MediMetrics AI Inference Service"
authors = ["MediMetrics Team"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
redis = "^5.0.0"
rq = "^1.15.0"
boto3 = "^1.28.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
monai = "^1.3.0"
numpy = "^1.24.0"
opencv-python = "^4.8.0"
pydicom = "^2.4.0"
SimpleITK = "^2.3.0"
Pillow = "^10.0.0"
scikit-image = "^0.22.0"
matplotlib = "^3.7.0"
prometheus-client = "^0.18.0"
httpx = "^0.25.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"