[tool.poetry]
name = "power-electronics-sim"
version = "1.0.0"
description = "Power Electronics Simulation Service"
authors = ["Power Electronics Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
numba = "^0.58.0"
pandas = "^2.1.0"
redis = "^5.0.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.0"
aiomqtt = "^2.0.0"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
matplotlib = "^3.8.0"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
black = "^23.11.0"
ruff = "^0.1.0"
ipython = "^8.18.0"
jupyter = "^1.0.0"
hypothesis = "^6.92.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"